...
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y53-Hw-Q7D" userLabel="EmailView">
                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="59"/>
                                                    <subviews>
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J9e-0j-yAh">
                                                            <rect key="frame" x="8" y="8" width="377" height="43"/>
                                                            <subviews>
                                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q7y-AR-MYT">
                                                                    <rect key="frame" x="8" y="0.0" width="361" height="43"/>
                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" textContentType="email"/>
                                                                </textField>
...
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LZl-sa-hOU" userLabel="PasswordView">
                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="59"/>
                                                    <subviews>
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nuU-WB-cdo">
                                                            <rect key="frame" x="8" y="8" width="377" height="43"/>
                                                            <subviews>
                                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nil-zj-xrc">
                                                                    <rect key="frame" x="8" y="0.0" width="361" height="43"/>
                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES" textContentType="password"/>
                                                                </textField>
...
                                                    <rect key="frame" x="0.0" y="0.0" width="393" height="70"/>
                                                    <subviews>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ei5-pg-Xb8">
                                                            <rect key="frame" x="8" y="8" width="377" height="54"/>
                                                            <color key="backgroundColor" red="0.054901960780000002" green="0.19215686269999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                            <state key="normal" title="Log in">
                                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </state>
                                                            <userDefinedRuntimeAttributes>
                                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                                    <real key="value" value="5"/>
                                                                </userDefinedRuntimeAttribute>
...
            </objects>
            <point key="canvasLocation" x="1281.679389312977" y="-1.4084507042253522"/>
        </scene>
        <!--Profile-->
        <scene sceneID="iZU-4E-IYJ">
            <objects>
                <viewControllerPlaceholder storyboardName="Profile" id="Qad-q2-1N2" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="xVq-4t-KaT"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Jgk-PE-ypU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1853" y="-1"/>
        </scene>
...
