...
                                                                        <constraint firstItem="WOP-la-7ec" firstAttribute="leading" secondItem="3dN-Cf-MEA" secondAttribute="leading" id="Uh3-wf-9Gb"/>
                                                                        <constraint firstAttribute="width" constant="35" id="XR7-3e-lG0"/>
                                                                        <constraint firstAttribute="trailingMargin" secondItem="WOP-la-7ec" secondAttribute="trailing" id="epL-QC-mDs"/>
                                                                        <constraint firstItem="WOP-la-7ec" firstAttribute="top" secondItem="3dN-Cf-MEA" secondAttribute="topMargin" id="gb1-t2-Xv5"/>
                                                                    </constraints>
                                                                </view>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log Out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="Umw-FN-ubK">
                                                                    <rect key="frame" x="35" y="8" width="334" height="20"/>
                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                    <color key="textColor" red="0.066666666669999999" green="0.066666666669999999" blue="0.066666666669999999" alpha="1" colorSpace="calibratedRGB"/>
                                                                    <nil key="highlightedColor"/>
                                                                </label>
...
